--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,8 @@ runs:
       run: |
         echo "debug"
         prettier --check --config ${{ inputs.config_path }} --ignore-path ${{ inputs.ignore_path }} --no-error-on-unmatched-pattern "${{ inputs.file_pattern }}"
-        echo "prettier-output=$(prettier --check --config ${{ inputs.config_path }} --ignore-path ${{ inputs.ignore_path }} --no-error-on-unmatched-pattern ${{ inputs.file_pattern }})" >> $GITHUB_OUTPUT
+        prettier --list-different --config ${{ inputs.config_path }} --ignore-path ${{ inputs.ignore_path }} --no-error-on-unmatched-pattern "${{ inputs.file_pattern }}"
+        echo "prettier-output=$(prettier --check --config ${{ inputs.config_path }} --ignore-path ${{ inputs.ignore_path }} --no-error-on-unmatched-pattern \"${{ inputs.file_pattern }}\"")" >> $GITHUB_OUTPUT
 
     - name: Fail On Error
       id: fail-on-error
